@startuml Daysave App ERD

' Entities
entity "user_profiles" {
  * userId : UUID
  --
  username : VARCHAR(255) <<NOT NULL>> <<UNIQUE>>
  email : VARCHAR(255) <<NOT NULL>> <<UNIQUE>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "content_sources" {
  * id : UUID
  --
  name : ENUM('youtube', 'facebook', 'instagram', 'upload', 'weblink', 'whatsapp', 'whatsappbusiness', 'teams', 'zoom', 'threema', 'linkedin', 'messenger', 'telegram', 'discord', 'snapchat', 'threads', 'slack', 'github', 'signal', 'gmail', 'simple', 'tiktok', 'revolut') <<NOT NULL>>
}

entity "content" {
  * id : UUID
  --
  userId : UUID <<NOT NULL>>
  title : VARCHAR(255) <<NOT NULL>>
  body : TEXT <<NOT NULL>>
  source_id : UUID
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "comments" {
  * id : UUID
  --
  content_id : UUID <<NOT NULL>>
  commenter_id : UUID <<NOT NULL>>
  comment : TEXT <<NOT NULL>>
  created_at : DATETIME
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "auth_providers" {
  * id : UUID
  --
  user_profile_id : UUID <<NOT NULL>>
  provider : ENUM('local', 'google', 'github', 'apple', 'passkey', 'microsoft', 'facebook', 'twitter', 'instagram') <<NOT NULL>>
  provider_user_id : VARCHAR(255)
  hashed_password : VARCHAR(255)
  passkey_data : JSON
}

entity "contact_groups" {
  * id : UUID
  --
  user_profile_id : UUID <<NOT NULL>>
  name : VARCHAR(255) <<NOT NULL>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "contacts" {
  * id : UUID
  --
  user_profile_id : UUID <<NOT NULL>>
  group_id : UUID
  name : VARCHAR(255) <<NOT NULL>>
  email : VARCHAR(255)
  phone : VARCHAR(255)
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "contact_group_members" {
  * id : UUID
  --
  group_id : UUID <<NOT NULL>>
  contact_id : UUID <<NOT NULL>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "content_shares" {
  * id : UUID
  --
  content_id : UUID <<NOT NULL>>
  user_profile_id : UUID <<NOT NULL>>
  shared_at : DATETIME <<NOT NULL>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "fingerprints" {
  * id : UUID
  --
  user_profile_id : UUID <<NOT NULL>>
  fingerprint_data : JSON
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "mfa_methods" {
  * id : UUID
  --
  user_profile_id : UUID <<NOT NULL>>
  method_type : ENUM('totp', 'sms', 'email', 'authenticator_app') <<NOT NULL>>
  secret : VARCHAR(255)
  is_active : TINYINT(1) <<NOT NULL>> <<DEFAULT true>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "subscriptions" {
  * id : UUID
  --
  user_profile_id : UUID <<NOT NULL>>
  plan : ENUM('basic', 'premium', 'enterprise') <<NOT NULL>>
  start_date : DATETIME <<NOT NULL>>
  end_date : DATETIME
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "role_permissions" {
  * id : UUID
  --
  user_profile_id : UUID <<NOT NULL>>
  permission : VARCHAR(255) <<NOT NULL>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "payment_providers" {
  * id : UUID
  --
  name : VARCHAR(255) <<NOT NULL>> <<UNIQUE>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "payment_transactions" {
  * id : UUID
  --
  user_profile_id : UUID <<NOT NULL>>
  subscription_id : UUID <<NOT NULL>>
  provider_id : UUID <<NOT NULL>>
  amount : DECIMAL(10,2) <<NOT NULL>>
  status : ENUM('pending', 'completed', 'failed', 'refunded') <<NOT NULL>> <<DEFAULT 'pending'>>
  transaction_date : DATETIME <<NOT NULL>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "permissions" {
  * id : UUID
  --
  name : VARCHAR(255) <<NOT NULL>> <<UNIQUE>>
  description : VARCHAR(255)
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "roles" {
  * id : UUID
  --
  name : VARCHAR(255) <<NOT NULL>> <<UNIQUE>>
  description : VARCHAR(255)
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "social_providers" {
  * id : UUID
  --
  name : VARCHAR(255) <<NOT NULL>> <<UNIQUE>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "social_profiles" {
  * id : UUID
  --
  user_profile_id : UUID <<NOT NULL>>
  provider_id : UUID <<NOT NULL>>
  provider_user_id : VARCHAR(255) <<NOT NULL>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "statistics" {
  * id : UUID
  --
  user_profile_id : UUID <<NOT NULL>>
  metric : VARCHAR(255) <<NOT NULL>>
  value : INTEGER <<NOT NULL>>
  recorded_at : DATETIME <<NOT NULL>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "tags" {
  * id : UUID
  --
  name : VARCHAR(255) <<NOT NULL>> <<UNIQUE>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "content_tags" {
  * id : UUID
  --
  content_id : UUID <<NOT NULL>>
  tag_id : UUID <<NOT NULL>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "user_roles" {
  * id : UUID
  --
  user_profile_id : UUID <<NOT NULL>>
  role_id : UUID <<NOT NULL>>
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "content_analysis" {
  * id : UUID
  --
  content_id : UUID <<NOT NULL>>
  analysis_type : VARCHAR(255) <<NOT NULL>>
  result : JSON
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "subscription_grace_periods" {
  * id : UUID
  --
  subscription_id : UUID <<NOT NULL>>
  start_date : DATETIME <<NOT NULL>>
  end_date : DATETIME <<NOT NULL>>
  reason : VARCHAR(255)
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

entity "audit_logs" {
  * id : UUID
  --
  user_profile_id : UUID <<NOT NULL>>
  action : VARCHAR(255) <<NOT NULL>>
  details : JSON
  createdAt : DATETIME <<NOT NULL>>
  updatedAt : DATETIME <<NOT NULL>>
}

' Relationships
user_profiles ||--o{ content
user_profiles ||--o{ comments
user_profiles ||--o{ auth_providers
user_profiles ||--o{ contact_groups
user_profiles ||--o{ contacts
user_profiles ||--o{ content_shares
user_profiles ||--o{ fingerprints
user_profiles ||--o{ mfa_methods
user_profiles ||--o{ subscriptions
user_profiles ||--o{ role_permissions
user_profiles ||--o{ payment_transactions
user_profiles ||--o{ social_profiles
user_profiles ||--o{ statistics
user_profiles ||--o{ user_roles
user_profiles ||--o{ audit_logs

content_sources ||--o{ content

content ||--o{ comments
content ||--o{ content_shares
content ||--o{ content_analysis
content ||--o{ content_tags

contact_groups ||--o{ contacts
contact_groups ||--o{ contact_group_members

contacts ||--o{ contact_group_members

subscriptions ||--o{ payment_transactions
subscriptions ||--o{ subscription_grace_periods

payment_providers ||--o{ payment_transactions

roles ||--o{ user_roles

social_providers ||--o{ social_profiles

tags ||--o{ content_tags

@enduml